[package]
name = "fn_abi"
version = "2.0.0"
edition = "2018"
authors = ["William Venner <william@venner.io>"]
license = "MIT"
repository = "https://github.com/WilliamVenner/fn_abi"
description = "A proc attribute macro that sets the ABI/calling convention for the attributed function"
categories = ["development-tools::ffi"]
keywords = ["abi", "calling-convention", "cross-compilation", "extern", "macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
syn_squash = "0"